[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/effect/light.png" type="Texture" id=1]
[ext_resource path="res://scripts/enviroment/physic_item.gd" type="Script" id=2]

[node name="PhysicItem" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Texture" type="Sprite" parent="."]

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]

[node name="Notifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Light" type="Light2D" parent="."]
texture = ExtResource( 1 )
texture_scale = 0.2
color = Color( 2, 1, 1, 1 )
energy = 0.5

[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
[connection signal="screen_exited" from="Notifier2D" to="." method="_on_Notifier2D_screen_exited"]
